# AsterInc

./: render.yaml
app/defang_sample/: settings.py
asterlaunch/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  package.json  tailwind.config.ts
asterlaunch/anchor/: Anchor.toml  Cargo.toml
asterlaunch/anchor/programs/aster_launch/: Cargo.toml
asterlaunch/anchor/programs/aster_launch/src/: lib.rs
asterlaunch/frontend/: package.json  tailwind.config.ts
asterlaunch/frontend/app/: globals.css  layout.tsx  page.tsx
asterlaunch/frontend/components/: ChartPanel.tsx  CreateForm.tsx  TokenTable.tsx  TradePanel.tsx  WalletProvider.tsx
asterlaunch/frontend/lib/: curve.ts
asterlaunch/solana-program/: Cargo.toml  README.md
asterlaunch/solana-program/src/: bonding_curve.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
asterlaunch/src/app/: globals.css  layout.tsx  page.tsx
asterlaunch/src/components/: Sidebar.tsx  TokenCard.tsx  WalletProvider.tsx
asterlaunch/src/lib/: mockData.ts
asterlaunch/src/types/: index.ts
astra-wallet/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
astra-wallet/contracts/: Anchor.toml  Cargo.toml  README.md
astra-wallet/contracts/programs/asterlaunch/: Cargo.toml
astra-wallet/contracts/programs/asterlaunch/src/: lib.rs
astra-wallet/contracts/src/: lib.rs
astra-wallet/src/: App.css  App.tsx  index.css
astra-wallet/src/components/: AISecurityScanner.tsx  AccountOverview.tsx  CreateTokenForm.tsx  Layout.tsx  (+2 more)
(+15 files in other folders)
