[package]
name = "aster_launch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aster_launch"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated-token", "mint", "token"] }
pyth-solana-receiver-sdk = "0.3.1"
