[package]
name = "asterlaunch"
version = "0.1.0"
description = "AsterLaunch - Solana Meme Coin Launchpad with Bonding Curve"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asterlaunch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"